Revision history for HTML::FormWidgets

          - Fewer test dependencies in boilerplate

0.24.1    2015-09-16 17:32:43
          - Replaced css images and js dirs with share directory
          - Better attribute naming in Chooser
          - Chooser can set button value attribute
          - Toolchain update
          - Updated prereqs and toolchain

0.23.1    2015-05-24 12:17:52
          - Removed numeric prefix from files in javascript directory
          - Added badges and a public repository

0.22.1    2015-05-01 13:58:36
          - Replaced last of q() with single quotes
          - Added uri_for method. Dropped options->{base} attr
          - Updated Javascript from most recent app
          - Switched to JSON for ajax calls
          - Rationalised the class names in Table
          - Switched to lexical subroutines
          - Added value attribute to Button
          - Create buttons not input type submit. Styles better
          - Fixed defined text error in ::Label
          - Form attrs deprecated in favour of form config
          - Removed Ident and VERSION from most files
          - Added namespace and name to check field args
          - Added reset button
          - Updated git pre commit hook
          - Updated toolchain

0.21.1    2013-08-19 18:00:51
          - Bumped version to fix bad indexing

0.20.1    2013-08-15 22:46:43
          - Switched to Dist::Zilla

0.19.3    2013-06-08 22:26:23
          - Replaced Class::Mop dep with Class::Load
          - Removed deprecated ajaxid attr
          - Fixed version numbers
          - Converted from SVN to Git

0.18.391  2013-04-18
          - Updated prereqs in Build.PL
          - Pass in just loc method not whole of view object
          - Stopped leakage in __inject

0.17.389  2013-02-17
          - Fixed tests to not depend on hash ordering

0.17.387  2012-11-13
          - Updated inc::Bob to 1.7. Removed defined ors

0.17.386  2012-11-07
          - Updated inc::Bob to 1.6